--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 SECRET_KEY = django-insecure-&pdop)@)qv8w=1^6w7e(6c9!snex67&bmv&r3aw2wpd5)!6hl2
 DEBUG = True
-DB_NAME = expenseswebsite
+DB_NAME = railway
 USER_NAME = root
-PASSWORD = admin
-DB_HOST = 127.0.0.1
-DB_PORT = 3306
+PASSWORD = pdCbNECsZ3NYorjQrbkv
+DB_HOST = containers-us-west-150.railway.app
+DB_PORT = 5813
