--- a/.gitignore
+++ b/.gitignore
@@ -169,6 +169,11 @@ cython_debug/
 # Note files
 note.txt
 
+# Static files
+*/static/*
+static/*
+static
+
 # PyCharm
 #  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
 #  be found at https://github.com/github/gitignore/blob/main/Global/JetBrains.gitignore
