--- a/.env-example
+++ b/.env-example
@@ -1,7 +1,15 @@
 SECRET_KEY = 
 DJANGO_SETTINGS_MODULE =
+
 DB_NAME = 
 USER_NAME = 
 PASSWORD = 
 DB_HOST = 
 DB_PORT = 
+
+EMAIL_BACKEND = 
+EMAIL_HOST = 
+EMAIL_PORT = 
+EMAIL_HOST_USER = 
+EMAIL_HOST_PASSWORD =  
+EMAIL_USE_TLS = 
