register user and send verification mail

--- a/.gitignore
+++ b/.gitignore
@@ -171,6 +171,12 @@ cython_debug/
 static/*
 static
 
+# Database migrations
+*/migrations/*
+migrations/*
+migrations/
+migrations
+
 # PyCharm
 #  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
 #  be found at https://github.com/github/gitignore/blob/main/Global/JetBrains.gitignore
